app/assets/stylesheets/nav.css.scss
@import 'variables.css.scss';

.logo {
  float: left;
  margin-top: 0.35rem;
  margin-left: 1em;
  margin-bottom: 0em;
  font-size: 1.5em;
  @media (max-width: 410px) {
    font-size: 1.1rem;
    margin-left: 0.5rem;
    margin-top: 0.7rem;
  }
  @media (max-width: 345px) {
    font-size: 0.9rem;
  }
  a {
    text-decoration: none;
    color: $dark_blue;
  }
  a:visited, a:hover, a:active {
    color: $dark_blue;
  }
}
.nav {
  background-color: $light_blue;
  display: inline-block;

  .tab {
    display: inline-block;
    margin-top: 0.55rem;
    color: $dark_blue;
    background-color: $blue;
    font-size: 1.4em;
    padding: 0.2em 0.5em 0.1em 0.5em;
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
    cursor: pointer;
    font-weight: bold;
    a{
      text-decoration: none;
      color: $light_blue;
    }
    a:visited {
      color: $light_blue;
    }
    /* a:hover { */
    /*   color: $light_blue_hover; */
    /*   background-color: $blue_hover; */
    /* } */

    @media (max-width: 455px) {
      font-size: 1.1rem;
      margin-top: 1rem;
    }
    @media (max-width: 345px) {
      font-size: 1rem;
    }
  }
  .agenda {
    margin-left: 1em;

    @media (max-width: 410px) {
      margin-left: 0.6rem;
    }
  }
  .not_current_tab:hover {
    background-color: $blue_hover;
    
    a {
      color: $light_blue_hover;
    }

    }

  .current_tab {
    background-color: $dark_blue;
    a {
      text-decoration: none;
      color: $light_blue;
    }
    a:visited {
      color: $light_blue;
    }
  }
}

#header_link {
  float: right;
  margin: 0.7em 0.5em;
  border-radius: 8px;
  a {
    text-align: center;
    font-size: 1em;
    color: $light_blue;
    text-decoration: none;
    border-radius: 8px;
    padding: 4px 8px;
    background-color: $blue;
    @media (max-width: 410px) {
      font-size: 0.75rem;
    }
    @media (max-width: 345px) {
      font-size: 0.6rem;
    }
  }
  a:visited {
    color: $light_blue;
  }
  a:hover {
    color: $light_blue_hover;
    background-color: $blue_hover;
  }
}

#user {
  float: right;
  margin-top: 0.7rem;
  a {
    text-align: center;
    font-size: 1em;
    color: $light_blue;
    text-decoration: none;
    border-radius: 8px;
    padding: 4px 8px;
    background-color: $blue;
    @media (max-width: 410px) {
      font-size: 0.75rem;
    }
  }
  a:visited {
    color: $light_blue;
  }
  a:hover {
    color: $light_blue_hover;
    background-color: $blue_hover;
  }
  .icon-user {
    margin-top: 0.3rem;
  }
}

#profile_button {
  margin-top: 0.5rem;
  float: right;
  @media (max-width: 345px) {
    margin-top: 0.7rem;
  }
  .icon-user {
    color: $blue;
    font-size: 1.6rem;
    display: inline-block;
    @media (max-width: 345px) {
      font-size: 1.4rem;
    }
  }
  .icon-user:hover {
    color: $blue_hover;
  }
}

